# font-end-challenge

./: NOTES.md  README.md  docker-compose.yml
api/: API_NOTES.md  Dockerfile  main.py  pyproject.toml
app/: .gitignore  README.md  package.json
app/src/: App.vue  main.ts
app/src/api/: assets.ts  client.ts  configuration.ts  power.ts  telemetry.ts
app/src/components/: AssetDetailHeader.vue  AssetNameTag.vue  AssetNameTags.vue  AssetPowerChart.vue  AssetTelemetryLive.vue  AssetTile.vue  ConfigurationModal.vue  DashboardLayout.vue  ModalCloseButton.vue  PowerChart.vue  TelemetryChart.vue
app/src/constants/: chartColors.ts
app/src/plugins/: vuetify.ts
app/src/router/: index.ts
app/src/stores/: assets.ts  power.ts  selection.ts  telemetry.ts
app/src/types/: index.ts
app/src/views/: AssetDetailView.vue  AssetListView.vue  ConfigurationView.vue  DashboardView.vue  PowerView.vue  TelemetryView.vue
